2019 oct 09 fixed prpperty list version related problems, added some missing properties
 