@@ -7,7 +7,7 @@
 
 
 apps = attributes
-CXXFLAGS =  -std=c++17  -I/usr/local/include -I/usr/include
+CXXFLAGS =  -std=c++17  
 LIBS =  -lhdf5  -lz -ldl -lm
 INCLUDES = -I/usr/local/include -I/usr/include
 
@@ -29,7 +29,7 @@ all: $(apps)
 # with -Dmyfile.h specifies the generated output, which must be sandwiched between
 # <h5cpp/core> and <h5cpp/io>
 generated.h: struct.h
-	h5cpp  attributes.cpp --  $(CXXFLAGS) -I/usr/include/h5cpp-llvm -Dgenerated.h
+	h5cpp  attributes.cpp --  $(CXXFLAGS) -Dgenerated.h
 
 attributes.o : attributes.cpp generated.h 
 	$(CXX) -o attributes.o  $(CXXFLAGS) -c attributes.cpp
@@ -38,7 +38,9 @@ attributes: attributes.o
 	$(CXX) $^ $(LIBS) -o $@	
 
 clean:
-	@$(RM) *.o *.prof *.h5 $(apps) generated.h
+	@$(RM) *.o *.prof *.h5 $(apps)
 
+distclean: clean
+	@$(RM) generated.h
 .PHONY: test
 
