@@ -8,7 +8,7 @@
 
 apps = basics
 
-CXXFLAGS =  -std=c++11 -Wno-deprecated
+CXXFLAGS =  -std=c++17 -Wno-deprecated
 LIBS =  -lhdf5  -lz -ldl -lm
 
 test: $(apps)
@@ -25,6 +25,8 @@ basics: basics.o
 
 clean:
 	@$(RM) *.o *.prof *.h5 $(apps)
+
+distclean: clean
 
 .PHONY: test
 
