@@ -22,5 +22,6 @@ transform: transform.o
 clean:
 	@$(RM) *.o *.prof *.h5 $(apps)
 
+distclean: clean
 .PHONY: test
 
